force-app/main/default/objects/InvestmentRecord__c/InvestmentRecord__c.object-meta.xml
<CustomObject>
    <label>Investment Record</label>
    <nameField>
        <displayFormat>IR-{00}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>