force-app/main/default/objects/InvestmentRecord__c/fields/Acc__c.field-meta.xml
<CustomField>
    <fullName>Acc__c</fullName>
    <description>Master-Detail to account to check where has the money been invested.</description>
    <inlineHelpText>This field has a Master detail relationship and will auto populate. This field is to check where has the money been invested.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investment Records</relationshipLabel>
    <relationshipName>InvestmentRecords</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>