force-app/main/default/objects/InvestmentRecord__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>Acc__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Enter the Account associated with this record. Select via Lookup or Create New.</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>