force-app/main/default/objects/InvestmentRecord__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the Fee Structure for this record. Select via Lookup or Create New.</inlineHelpText>
    <label>Fee Structure</label>
    <referenceTo>Fee__c</referenceTo>
    <relationshipLabel>Investment Records</relationshipLabel>
    <relationshipName>Investment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>