force-app/main/default/objects/InvestmentRecord__c/fields/FinancialInstrumentUsed__c.field-meta.xml
<CustomField>
    <fullName>FinancialInstrumentUsed__c</fullName>
    <inlineHelpText>Enter the Financial Instrument Used. Select one from the Picklist</inlineHelpText>
    <label>Financial Instrument Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convertible Note</fullName>
            </value>
            <value>
                <fullName>Stock Purchase</fullName>
            </value>
            <value>
                <fullName>Debt Instrument</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>