force-app/main/default/objects/InvestmentRecord__c/fields/IA__c.field-meta.xml
<CustomField>
    <fullName>IA__c</fullName>
    <inlineHelpText>Enter the Investment Amount</inlineHelpText>
    <label>Investment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>