force-app/main/default/objects/InvestmentRecord__c/fields/IAmtAftFee__c.field-meta.xml
<CustomField>
    <fullName>IAmtAftFee__c</fullName>
    <formula>IA__c-TotalFeeAmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a %age Formula field and is calculated as Investment Amount - fee schedule amount</inlineHelpText>
    <label>Investment Amount After Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>