force-app/main/default/objects/InvestmentRecord__c/fields/InvestmentName__c.field-meta.xml
<CustomField>
    <fullName>InvestmentName__c</fullName>
    <description>Concatenation of Investment Id and Account Name field</description>
    <formula>Name +&quot; &quot; +  Acc__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Concatenation of Investment Id and Account Name field</inlineHelpText>
    <label>Investment Name</label>
    <type>Text</type>
</CustomField>