force-app/main/default/objects/InvestmentRecord__c/fields/InvestmentStructureType__c.field-meta.xml
<CustomField>
    <fullName>InvestmentStructureType__c</fullName>
    <label>Investment Structure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venture funds</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
            <value>
                <fullName>Public Equities</fullName>
            </value>
            <value>
                <fullName>Trading Fund</fullName>
            </value>
            <value>
                <fullName>Venture Capital Investments into AI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>