force-app/main/default/objects/InvestmentRecord__c/fields/InvestmentType__c.field-meta.xml
<CustomField>
    <fullName>InvestmentType__c</fullName>
    <inlineHelpText>Enter the type of Investment. Select one from the Picklist</inlineHelpText>
    <label>Investment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Steel Perlot - Fund Investment</fullName>
            </value>
            <value>
                <fullName>Steel Perlot - Fund of Funds</fullName>
            </value>
            <value>
                <fullName>Steel Perlot - Subsidiary Investment</fullName>
            </value>
            <value>
                <fullName>Steel Perlot - Venture Capital Investment</fullName>
            </value>
            <value>
                <fullName>Steel Perlot - Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>