force-app/main/default/objects/InvestmentRecord__c/fields/InvestorType__c.field-meta.xml
<CustomField>
    <fullName>InvestorType__c</fullName>
    <inlineHelpText>Enter the Investor Type. Select one from the Picklist</inlineHelpText>
    <label>Investor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>