force-app/main/default/objects/InvestmentRecord__c/fields/PresentVal__c.field-meta.xml
<CustomField>
    <fullName>PresentVal__c</fullName>
    <formula>TPVal__c - TotalFeeAmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Present Value of Investment After Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>