force-app/main/default/objects/InvestmentRecord__c/fields/TotalFeeAmt__c.field-meta.xml
<CustomField>
    <fullName>TotalFeeAmt__c</fullName>
    <inlineHelpText>This field gives the Roll up summary of the Total Fee Amount</inlineHelpText>
    <label>Total Fee Amount</label>
    <summarizedField>Investment_Fee__c.FeeAmount__c</summarizedField>
    <summaryForeignKey>Investment_Fee__c.IR__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>