force-app/main/default/objects/InvestmentRecord__c/fields/TotalInvestedFundAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalInvestedFundAmount__c</fullName>
    <label>Total Invested Fund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>