force-app/main/default/objects/InvestmentRecord__c/fields/TPVal__c.field-meta.xml
<CustomField>
    <fullName>TPVal__c</fullName>
    <label>Present Value of Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>