force-app/main/default/objects/InvestmentRecord__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fee__c</columns>
    <columns>IA__c</columns>
    <columns>Acc__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>